# dotfiles

./: .bash_profile  .bashrc  .bashrc-functions  .gitconfig  .gitignore  .gitmodules  .mcp.json  .ncmpcpp  .xmobarrc  CLAUDE.md  Containerfile  Justfile  README.md  requirements.txt
.claude/commands/: update-proton-mu4e.md
.config/: appimagelauncher.cfg  mimeapps.list  pomodoro.yaml  starship.toml  webhook-cmd.yaml
.config/ai-glib/: config.yaml
.config/autostart/: ch.protonmail.protonmail-bridge.desktop  io.github.martchus.syncthingtray.desktop  me.kozec.syncthingtk.desktop  org.gnome.World.PikaBackup.desktop  remmina-applet.desktop
.config/btop/: btop.conf
.config/canned_reponses/: 10-work.yaml  20-slack.yaml  50-code-bash.yaml  60-prompts.yaml  99-general.yaml  Makefile  cr.yaml
.config/claude-web-ui/: UserSettings.hs
.config/cmacs/: init.c
.config/doom/: +ai.el  +cmacs-ai.el  +ement.el  +emms.el  +games.el  +gowl.el  +home-assistant.el  +jira.el  +modeline.el  +mu4e.el  +org-timeblock.el  +org.el  +reading.el  +rss.el  +tramp-perf.el  +yeetube.el  arr-queue.el  arr-search.el  arr.el  art-of-war.el  cmacs.el  command-center.el  config.el  container-registry-browse.el  eshell.el  eww.el  init.el  jackett.el  org-remark.el  packages.el  qbittorrent-torrents.el  qbittorrent-webui.el  recipes-ai.el  recipes-export.el  recipes-plan.el  recipes.el  sf.el  (+4 more)
.config/xmonad/: .ghc.environment.x86_64-linux-9.6.6  build  hie.yaml  stack.yaml  xmonad-config.cabal  xmonad-stack.cabal  xmonad.hs
.newsboat/: config  urls
.shh/: Shell.hs  init.ghci  paths  wrapper
(+244 files in other folders)
