cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0

executable xmonad
    main-is:          xmonad.hs
    build-depends:    base
                    , xmonad
                    , xmonad-contrib
                    , unix
                    , process
                    , containers
                    , mtl
    default-language: Haskell2010
