cabal-version:      2.4
name:               xmonad-stack
version:            0.1.0.0

executable xmonad
    main-is:          xmonad.hs
    build-depends:    base >= 4.14 && < 5,
                      xmonad,
                      xmonad-contrib,
                      unix,
                      process,
                      containers,
                      mtl,
                      X11
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N